--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
- 
+  background-image: linear-gradient(to bottom right,#7a5cff,#3cd644 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 body {
@@ -15,9 +17,56 @@ body {
     margin: 0 auto;
     width: 320px;
     background-color: #292f36; 
-    color:#FFF;
     box-shadow: 0 19px 38px rgba(19, 19, 19, .24),
   0 15px 12px rgba(19, 19, 19, .12);
+}
+
+.result{
+  position: relative;
+  width: 320px;
+  height: 80px;
+  padding: 8px;
+  overflow: hidden;
+  background-color: rgba(19, 19, 19, .64);
+  line-height: 2;
+  font-size: 32px;
+  color: #3cd644;
+  text-align: right;
+  direction: ltr;
+  white-space: nowrap;
+  box-sizing: border-box;
+}
+
+button {
+  outline: none;
+  border: 0;
+  padding: 16px;
+  font-size: 20px;
+  line-height: 1;
+  background-color: transparent;
+  color: #ffce5c;
+  transition: all 300mx;
+  border: solid 1px #0001;
+}
+
+button:hover{
+  color: #00a3f5;
+  border: 1px solid #ffce5c22;
+}
+.numbers {
+  width: 240px;
+  float: left;
+}
+.numbers button{
+  display: block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  float: left;
+}
+
+.numbers button:last-child{
+  width: 100%;
 }
 
 
